file methods init

--- a/member1_bilinear/member1_bilinear_main.ipynb
+++ b/member1_bilinear/member1_bilinear_main.ipynb
@@ -33,6 +33,8 @@
     "from sklearn import datasets, model_selection\n",
     "from glob import glob\n",
     "\n",
+    "import file_methods\n",
+    "\n",
     "print(f\"python version = {sys.version}\")\n",
     "print(f\"numpy version = {np.__version__}\")\n",
     "print(f\"xarray version = {xr.__version__}\")\n",
