--- a/member1_bilinear/member1_bilinear_exploration_v1.ipynb
+++ b/member1_bilinear/member1_bilinear_exploration_v1.ipynb
@@ -809,15 +809,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[21.611505126953148, 25.918054199218773, 27.269952392578148, 28.610772705078148, 28.528924560546898, 27.382684326171898, 25.381677246093773, 23.286889648437523, 20.779382324218773, 22.717462158203148, 24.222894287109398, 25.480096435546898, 26.536431884765648, 26.904138183593773, 28.382836914062523, 28.236138916015648, 26.099847412109398, 18.609643554687523, 21.621148681640648, 22.120141601562523, 23.972375488281273, 25.692590332031273, 24.254602050781273, 23.169976806640648, 21.436029052734398, 23.083612060546898, 22.313195800781273, 19.446862792968773, 23.126092529296898, 24.119531250000023]\n",
-      "[-20.995443725585915, -16.813330078124977, -17.005468749999977, -15.552069091796852, -17.82573547363279, -17.002874755859352, -18.72484436035154, -18.370733642578102, -16.119573974609352, -14.711248779296852, -14.854589843749977, -11.903570556640602, -13.699682617187477, -11.639349365234352, -14.486639404296852, -17.233648681640602, -17.128790283203102, -14.141851806640602, -8.564367675781227, -7.359259033203102, -13.799963378906227, -14.489599609374977, -8.012884521484352, -8.552435302734352, -7.829199218749977, -13.358618164062477, -13.034155273437477, -14.233038330078102, -11.357763671874977, -8.715765380859352]\n"
+     "ename": "NameError",
+     "evalue": "name 'dataset_1850_07_30' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m foco_lon \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mround\u001b[39m(\u001b[38;5;241m105.0844\u001b[39m)\n\u001b[1;32m      4\u001b[0m summer_days \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m day \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdataset_1850_07_30\u001b[49m\u001b[38;5;241m.\u001b[39mtime:\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Extract surface temperature for the specified location (foco_lat, foco_lon)\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     temp_at_location \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(dataset_1850_07_30\u001b[38;5;241m.\u001b[39mTS\u001b[38;5;241m.\u001b[39msel(time\u001b[38;5;241m=\u001b[39mday, lat\u001b[38;5;241m=\u001b[39mfoco_lat, lon\u001b[38;5;241m=\u001b[39mfoco_lon, method \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnearest\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m273.15\u001b[39m)\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;66;03m# Append the temperature to the list\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset_1850_07_30' is not defined"
      ]
     }
    ],
@@ -842,8 +845,16 @@
     "    temp_at_location2 = float(dataset.TS.sel(time =day, lat = foco_lat, lon = foco_lon, method = 'nearest') - 273.15)\n",
     "    winter_days.append(temp_at_location2)\n",
     "\n",
-    "print(winter_days)"
+    "print(winter_days)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df73cade",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -862,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
