"Light editing on local machine - updated exp001 config and analysis files to try a smaller dataset. Didn't work. Added metrics elements to network structure"

--- a/analysis_002.ipynb
+++ b/analysis_002.ipynb
@@ -566,23 +566,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Setup the Data\n",
-    "# trainset = data_loader.CustomData(config[\"data_loader\"][\"data_dir\"] + \"exp002_train.pkl\")\n",
-    "# valset = data_loader.CustomData(config[\"data_loader\"][\"data_dir\"] + \"exp002_val.pkl\")\n",
+    "# Setup the Data\n",
+    "trainset = data_loader.CustomData(config[\"data_loader\"][\"data_dir\"] + \"exp002_train.pkl\")\n",
+    "valset = data_loader.CustomData(config[\"data_loader\"][\"data_dir\"] + \"exp002_val.pkl\")\n",
     "\n",
-    "# train_loader = torch.utils.data.DataLoader(\n",
-    "#     trainset,\n",
-    "#     batch_size=config[\"data_loader\"][\"batch_size\"],\n",
-    "#     shuffle=True,\n",
-    "#     drop_last=False,\n",
-    "# )\n",
+    "train_loader = torch.utils.data.DataLoader(\n",
+    "    trainset,\n",
+    "    batch_size=config[\"data_loader\"][\"batch_size\"],\n",
+    "    shuffle=True,\n",
+    "    drop_last=False,\n",
+    ")\n",
     "\n",
-    "# val_loader = torch.utils.data.DataLoader(\n",
-    "#     valset,\n",
-    "#     batch_size=config[\"data_loader\"][\"batch_size\"],\n",
-    "#     shuffle=False,\n",
-    "#     drop_last=False,\n",
-    "# )"
+    "val_loader = torch.utils.data.DataLoader(\n",
+    "    valset,\n",
+    "    batch_size=config[\"data_loader\"][\"batch_size\"],\n",
+    "    shuffle=False,\n",
+    "    drop_last=False,\n",
+    ")"
    ]
   },
   {
@@ -598,32 +598,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Setup the Model\n",
-    "# model = TorchModel(\n",
-    "#     config=config[\"arch\"],\n",
-    "#     target_mean=trainset.target.mean(axis=0),\n",
-    "#     target_std=trainset.target.std(axis=0),\n",
-    "# )\n",
-    "# model.freeze_layers(freeze_id=\"tau\")\n",
-    "# optimizer = getattr(torch.optim, config[\"optimizer\"][\"type\"])(\n",
-    "#     model.parameters(), **config[\"optimizer\"][\"args\"]\n",
-    "# )\n",
-    "# criterion = getattr(module_loss, config[\"criterion\"])()\n",
-    "# metric_funcs = [getattr(module_metric, met) for met in config[\"metrics\"]]\n",
+    "# Setup the Model\n",
+    "model = TorchModel(\n",
+    "    config=config[\"arch\"],\n",
+    "    target_mean=trainset.target.mean(axis=0),\n",
+    "    target_std=trainset.target.std(axis=0),\n",
+    ")\n",
+    "model.freeze_layers(freeze_id=\"tau\")\n",
+    "optimizer = getattr(torch.optim, config[\"optimizer\"][\"type\"])(\n",
+    "    model.parameters(), **config[\"optimizer\"][\"args\"]\n",
+    ")\n",
+    "criterion = getattr(module_loss, config[\"criterion\"])()\n",
+    "metric_funcs = [getattr(module_metric, met) for met in config[\"metrics\"]]\n",
     "\n",
-    "# # Build the trainer\n",
-    "# device = utils.prepare_device(config[\"device\"])\n",
-    "# trainer = Trainer(\n",
-    "#     model,\n",
-    "#     criterion,\n",
-    "#     metric_funcs,\n",
-    "#     optimizer,\n",
-    "#     max_epochs=config[\"trainer\"][\"max_epochs\"],\n",
-    "#     data_loader=train_loader,\n",
-    "#     validation_data_loader=val_loader,\n",
-    "#     device=device,\n",
-    "#     config=config,\n",
-    "# )\n"
+    "# Build the trainer\n",
+    "device = utils.prepare_device(config[\"device\"])\n",
+    "trainer = Trainer(\n",
+    "    model,\n",
+    "    criterion,\n",
+    "    metric_funcs,\n",
+    "    optimizer,\n",
+    "    max_epochs=config[\"trainer\"][\"max_epochs\"],\n",
+    "    data_loader=train_loader,\n",
+    "    validation_data_loader=val_loader,\n",
+    "    device=device,\n",
+    "    config=config,\n",
+    ")\n"
    ]
   }
  ],
