--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.5.0\n",
-      "pytorch version = 2.0.0.post104\n"
+      "xarray version = 2024.2.0\n",
+      "pytorch version = 2.1.2.post2\n"
      ]
     }
    ],
@@ -49,6 +49,120 @@
     "print(f\"pytorch version = {torch.__version__}\")\n",
     "\n",
     "# https://github.com/victoresque/pytorch-template/tree/master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_ds = xr.open_dataset(\"/Users/C830793391/BIG_DATA/E3SM_Data/ens1/input_vars.v2.LR.historical_0101.eam.h1.1850-1900.nc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.75371404,  0.75525987,  0.7567507 , ...,  0.74875468,\n",
+       "          0.75046018,  0.75211375],\n",
+       "        [ 0.51657055,  0.52325923,  0.52993227, ...,  0.49647284,\n",
+       "          0.50317119,  0.50987252],\n",
+       "        [ 0.46933657,  0.48346092,  0.49777904, ...,  0.4280769 ,\n",
+       "          0.44164969,  0.45540118],\n",
+       "        ...,\n",
+       "        [ 0.14095042,  0.13381758,  0.12669361, ...,  0.16242933,\n",
+       "          0.15525359,  0.14809486],\n",
+       "        [ 0.12907959,  0.12488175,  0.12067625, ...,  0.14160679,\n",
+       "          0.13744415,  0.13326774],\n",
+       "        [ 0.0967058 ,  0.09516778,  0.09363363, ...,  0.10132856,\n",
+       "          0.09978765,  0.09824624]],\n",
+       "\n",
+       "       [[ 0.26870513,  0.27055789,  0.27238834, ...,  0.26302907,\n",
+       "          0.26493899,  0.26683161],\n",
+       "        [ 0.18483641,  0.18951262,  0.19417817, ...,  0.170772  ,\n",
+       "          0.17546324,  0.18015233],\n",
+       "        [ 0.17347516,  0.18159267,  0.18979268, ...,  0.14954636,\n",
+       "          0.15745916,  0.16543303],\n",
+       "        ...,\n",
+       "        [ 0.13495707,  0.12724641,  0.11952692, ...,  0.1579876 ,\n",
+       "          0.15033254,  0.14265408],\n",
+       "        [ 0.13735097,  0.13265143,  0.1279571 , ...,  0.15147126,\n",
+       "          0.14676186,  0.14205477],\n",
+       "        [ 0.22467906,  0.22188806,  0.21908117, ...,  0.23292958,\n",
+       "          0.23020247,  0.22745143]],\n",
+       "\n",
+       "       [[ 0.05598081,  0.05625168,  0.05650713, ...,  0.05507887,\n",
+       "          0.05539402,  0.0556948 ],\n",
+       "        [ 0.14176597,  0.14393292,  0.14602277, ...,  0.13484293,\n",
+       "          0.1372169 ,  0.13952594],\n",
+       "        [ 0.21865646,  0.22452669,  0.23053555, ...,  0.20179619,\n",
+       "          0.20729942,  0.21291678],\n",
+       "        ...,\n",
+       "        [ 1.04165387,  1.03133965,  1.02061877, ...,  1.0701295 ,\n",
+       "          1.06105134,  1.05155868],\n",
+       "        [ 0.62762948,  0.62513633,  0.62248208, ...,  0.6340684 ,\n",
+       "          0.63210283,  0.62995409],\n",
+       "        [ 0.39998919,  0.4002617 ,  0.40049964, ...,  0.39896434,\n",
+       "          0.39934035,  0.39968202]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[14.4934237 , 14.43897318, 14.38481812, ..., 14.65802877,\n",
+       "         14.60300242, 14.54811688],\n",
+       "        [ 9.45841656,  9.36241904,  9.26909514, ...,  9.76251117,\n",
+       "          9.65845822,  9.55709398],\n",
+       "        [ 4.31860839,  4.20508148,  4.09358509, ...,  4.67253457,\n",
+       "          4.55221832,  4.4342818 ],\n",
+       "        ...,\n",
+       "        [ 1.29878438,  1.29172559,  1.28460047, ...,  1.32043075,\n",
+       "          1.31305041,  1.30586376],\n",
+       "        [ 1.69228991,  1.66799491,  1.64390406, ...,  1.76658573,\n",
+       "          1.74156638,  1.71680729],\n",
+       "        [ 1.98418602,  1.96675454,  1.94939504, ...,  2.03676067,\n",
+       "          2.0192044 ,  2.00167439]],\n",
+       "\n",
+       "       [[ 2.59465218,  2.60213067,  2.6097242 , ...,  2.57297532,\n",
+       "          2.58006798,  2.58729549],\n",
+       "        [ 2.45983141,  2.46520348,  2.47096043, ...,  2.44577748,\n",
+       "          2.45014324,  2.45481956],\n",
+       "        [ 1.65243176,  1.63539947,  1.61908713, ...,  1.70760726,\n",
+       "          1.6885597 ,  1.67015995],\n",
+       "        ...,\n",
+       "        [ 1.87672378,  1.89102305,  1.90548136, ...,  1.83462217,\n",
+       "          1.84853906,  1.86256769],\n",
+       "        [ 2.40489417,  2.41273193,  2.42085635, ...,  2.38316623,\n",
+       "          2.39010488,  2.39734967],\n",
+       "        [ 2.59289434,  2.59360172,  2.59439789, ...,  2.59131739,\n",
+       "          2.59175115,  2.59227701]],\n",
+       "\n",
+       "       [[ 1.10875716,  1.11778462,  1.1268535 , ...,  1.08200259,\n",
+       "          1.09085844,  1.09977912],\n",
+       "        [ 1.00264839,  1.01274707,  1.02303842, ...,  0.97333714,\n",
+       "          0.98296072,  0.99272542],\n",
+       "        [ 0.61148519,  0.60970256,  0.60826037, ...,  0.61885611,\n",
+       "          0.61606407,  0.61360635],\n",
+       "        ...,\n",
+       "        [ 2.29391719,  2.30365644,  2.31314219, ...,  2.26308682,\n",
+       "          2.27364189,  2.28391564],\n",
+       "        [ 1.9333197 ,  1.93852927,  1.94356768, ...,  1.91670751,\n",
+       "          1.92240458,  1.92794339],\n",
+       "        [ 1.56650164,  1.56796747,  1.56942514, ...,  1.56206939,\n",
+       "          1.5635511 ,  1.56502904]]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prect = train_ds[\"PRECT\"]\n",
+    "prect.values * 10e3 * 86400"
    ]
   },
   {
