"Customizing neural net and processing inputs including separately calcualted target. X_unit remains input in neural net code."

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.2.0\n",
-      "pytorch version = 2.1.2.post2\n"
+      "xarray version = 2024.5.0\n",
+      "pytorch version = 2.0.0.post104\n"
      ]
     }
    ],
@@ -1542,6 +1542,76 @@
     "plt.plot(temp, '.')\n",
     "plt.plot(xvals, py_nino34, 'o')\n",
     "plt.xlim([0,400])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_name = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp001_d_train_TARGET.pkl\"\n",
+    "with gzip.open(data_name, \"rb\") as obj1:\n",
+    "    d_train_target = pickle.load(obj1)\n",
+    "obj1.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [],\n",
+       " 'y': <xarray.DataArray 'PRECT' (time: 60212)> Size: 482kB\n",
+       " array([-0.12688022, -0.48002338, -1.79197601, ...,  2.73940417,\n",
+       "        -0.75435824, -0.68695164])\n",
+       " Coordinates:\n",
+       "   * time     (time) object 482kB 1850-01-15 00:00:00 ... 2015-01-01 00:00:00\n",
+       "     lon      float64 8B 122.5\n",
+       "     lat      float64 8B 47.5}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d_train_target"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_name = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp002_train.pkl\"\n",
+    "with gzip.open(data_name, \"rb\") as obj1:\n",
+    "    nn_train_input = pickle.load(obj1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(60225, 3)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn_train_input[\"x\"].shape"
    ]
   }
  ],
