--- a/databuilder/e3sm_viewer.ipynb
+++ b/databuilder/e3sm_viewer.ipynb
@@ -109,7 +109,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "NERSC Python",
    "language": "python",
    "name": "python3"
   },
@@ -123,9 +123,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
