"Updated multi input organizer function to include high-res ENSO and resave pkl files. Fixed lead/lag mismatch"

--- a/analysis_002.ipynb
+++ b/analysis_002.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -88,16 +88,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening MJO PCs\n",
+      "Opening high-res Nino34 Data\n",
+      "/pscratch/sd/p/plutzner/E3SM/bigdata/E3SMv2data/member0101/monthly_ne30pg2/nino.member0101.daily.nc\n",
+      "/pscratch/sd/p/plutzner/E3SM/bigdata/E3SMv2data/member0151/monthly_ne30pg2/nino.member0151.daily.nc\n",
+      "/pscratch/sd/p/plutzner/E3SM/bigdata/E3SMv2data/member0201/monthly_ne30pg2/nino.member0201.daily.nc\n",
+      "Opening exp002 target data for TRAINING\n",
+      "Opening exp002 target data for VALIDATION\n",
+      "Opening exp002 target data for TESTING\n",
+      "Combining Input and target data\n",
+      "(60211, 3, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.12688022, -0.48002338, -1.79197601, ...,  2.73940417,\n",
+       "       -0.75435824, -0.68695164])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "examp = s_dict_train[\"y\"]\n",
+    "examp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config)\n",
-    "\n",
-    "# s_dict_train[\"x\"][:124]\n",
-    "\n",
     "s_dict_savename1 = '/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp002_train.pkl'\n",
     "# with gzip.open(s_dict_savename1, \"wb\") as fp:\n",
     "#     pickle.dump(s_dict_train, fp)\n",
