--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1612,6 +1612,27 @@
    ],
    "source": [
     "nn_train_input[\"x\"].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, nan, nan, ..., nan, nan, nan], dtype=float32)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nino34_ncl = xr.open_dataset(\"/pscratch/sd/p/plutzner/E3SM/bigdata/E3SMv2data/member0101/monthly_ne30pg2/nino.member0101.daily.nc\")\n",
+    "nino340101 = nino34_ncl.nino34.values"
    ]
   }
  ],
