--- a/analysis_004.ipynb
+++ b/analysis_004.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -11,12 +11,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
+      "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
-      "xarray version = 2024.2.0\n",
-      "pytorch version = 2.1.2.post2\n"
+      "xarray version = 2024.5.0\n",
+      "pytorch version = 2.0.0.post104\n"
      ]
     }
    ],
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -90,8 +88,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "imp.reload(utils)\n",
@@ -112,26 +112,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opening .nc files\n",
+      "Opening .nc files\n",
+      "Opening .nc files\n",
+      "Processing training\n",
+      "isolating variables from ds\n",
+      "Processing target output\n",
+      "Length of target = 60225\n",
+      "Processing validation\n",
+      "isolating variables from ds\n",
+      "Processing target output\n",
+      "Length of target = 60225\n",
+      "Processing testing\n",
+      "isolating variables from ds\n",
+      "Processing target output\n",
+      "Length of target = 60225\n"
+     ]
+    }
+   ],
    "source": [
     "d_train, d_val, d_test = dataVC.fetch_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "d_train[\"y\"]"
+    "d_train[\"x\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -139,18 +178,18 @@
     "\n",
     "data_savename1 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp004_d_train_VANCOUVER_1850-2014.pkl\"\n",
     "#data_savename1 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp001_d_train.pkl\"\n",
-    "# with gzip.open(data_savename1, \"wb\") as fp:\n",
-    "#     pickle.dump(d_train, fp)\n",
+    "with gzip.open(data_savename1, \"wb\") as fp:\n",
+    "    pickle.dump(d_train, fp)\n",
     "\n",
     "data_savename2 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp004_d_val_VANCOUVER_1850-2014.pkl\"\n",
     "#data_savename2 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp001_d_val.pkl\"\n",
-    "# with gzip.open(data_savename2, \"wb\") as fp:\n",
-    "#     pickle.dump(d_val, fp)\n",
+    "with gzip.open(data_savename2, \"wb\") as fp:\n",
+    "    pickle.dump(d_val, fp)\n",
     "\n",
     "data_savename3 = \"/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp004_d_test_VANCOUVER_1850-2014.pkl\"\n",
     "#data_savename3 = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/exp001_d_test.pkl\"\n",
-    "# with gzip.open(data_savename3, \"wb\") as fp:\n",
-    "#     pickle.dump(d_test, fp)"
+    "with gzip.open(data_savename3, \"wb\") as fp:\n",
+    "    pickle.dump(d_test, fp)"
    ]
   },
   {
@@ -162,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -190,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -321,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -691,9 +730,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env-torch",
    "language": "python",
-   "name": "python3"
+   "name": "env-torch"
   },
   "language_info": {
    "codemirror_mode": {
