"Moving to perlmutter to pre-process TS input data for exp005. Ran exp004 to 3,000 epochs with high losses still."

--- a/analysis_005.ipynb
+++ b/analysis_005.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract Precip anomalies time series at Vancouver, BC"
+    "### Extract TEMP anomalies time series at Vancouver, BC"
    ]
   },
   {
@@ -78,7 +78,7 @@
    },
    "outputs": [],
    "source": [
-    "config = utils.get_config(\"exp004\")\n",
+    "config = utils.get_config(\"exp005\")\n",
     "seed = config[\"seed_list\"][0]\n",
     "\n",
     "torch.manual_seed(seed)\n",
