--- a/analysis_004.ipynb
+++ b/analysis_004.ipynb
@@ -6700,7 +6700,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-torch",
+   "display_name": "NERSC Python",
    "language": "python",
    "name": "python3"
   },
@@ -6714,7 +6714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
