"Unable to fully pre-process regional precip target on local machine - moving to Perlmutter"

--- a/analysis_004.ipynb
+++ b/analysis_004.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 753,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -11,8 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.2.0\n",
@@ -72,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 754,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -190,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,22 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60211, 2)"
+       "array([-0.12688022, -0.48002338, -1.79197601, ..., 16.78283364,\n",
+       "        2.73940417, -0.75435824])"
       ]
      },
-     "execution_count": 762,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_dat[\"x\"].shape"
+    "train_dat[\"y\"]"
    ]
   },
   {
