--- a/analysis_003.ipynb
+++ b/analysis_003.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
@@ -11,8 +11,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.2.0\n",
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -88,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
@@ -97,21 +95,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening MJO PCs\n",
-      "Opening high-res Nino34 Data\n",
-      "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/ENSO_ne30pg2_HighRes/nino.member0101.daily.nc\n",
-      "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/ENSO_ne30pg2_HighRes/nino.member0151.daily.nc\n",
-      "/Users/C830793391/BIG_DATA/E3SM_Data/presaved/ENSO_ne30pg2_HighRes/nino.member0201.daily.nc\n",
-      "Opening exp002 target data for TRAINING\n",
-      "Opening exp002 target data for VALIDATION\n",
-      "Opening exp002 target data for TESTING\n",
+      "Opening exp006 Seattle-area PRECIP target data for TRAINING\n",
+      "Opening exp006 Seattle-area PRECIP target data for VALIDATION\n",
+      "Opening exp006 Seattle-area PRECIP target data for TESTING\n",
       "Combining Input and target data\n",
       "(60211, 3, 3)\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'ninox_array' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m s_dict_train, s_dict_val, s_dict_test \u001b[38;5;241m=\u001b[39m \u001b[43mmulti_input_data_organizer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconfig\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Documents/Research/E3SM/databuilder/data_generator.py:523\u001b[0m, in \u001b[0;36mmulti_input_data_organizer\u001b[0;34m(config, MJO, ENSO, other)\u001b[0m\n\u001b[1;32m    520\u001b[0m target_dict \u001b[38;5;241m=\u001b[39m {\u001b[38;5;241m0\u001b[39m: exp006_d_train_target, \u001b[38;5;241m1\u001b[39m: exp006_d_val_target, \u001b[38;5;241m2\u001b[39m:exp006_d_test_target}\n\u001b[1;32m    522\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m target_dict\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m--> 523\u001b[0m     inputda[:,\u001b[38;5;241m0\u001b[39m,key] \u001b[38;5;241m=\u001b[39m \u001b[43mninox_array\u001b[49m[ :\u001b[38;5;241m-\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabuilder\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlagtime\u001b[39m\u001b[38;5;124m\"\u001b[39m], key] \u001b[38;5;66;03m#ENSO\u001b[39;00m\n\u001b[1;32m    524\u001b[0m     inputda[:\u001b[38;5;241m30\u001b[39m,\u001b[38;5;241m0\u001b[39m,key] \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mnan \u001b[38;5;66;03m# Fill beginning 30 zeros with Nans\u001b[39;00m\n\u001b[1;32m    525\u001b[0m     inputda[:,\u001b[38;5;241m1\u001b[39m,key] \u001b[38;5;241m=\u001b[39m MJOarray[ :\u001b[38;5;241m-\u001b[39mconfig[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatabuilder\u001b[39m\u001b[38;5;124m\"\u001b[39m][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlagtime\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;241m2\u001b[39m,key]  \u001b[38;5;66;03m#RMM1\u001b[39;00m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'ninox_array' referenced before assignment"
      ]
     }
    ],
    "source": [
-    "s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config)"
+    "s_dict_train, s_dict_val, s_dict_test = multi_input_data_organizer(config, ENSO=True, MJO=True, other=False)"
    ]
   },
   {
@@ -845,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
