--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:12:31) [Clang 14.0.6 ]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.2.0\n",
@@ -637,6 +635,43 @@
     "d_train[\"y\"]\n",
     "plt.figure()\n",
     "plt.plot(d_test[\"y\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mjo_filename = \"/Users/C830793391/BIG_DATA/E3SM_Data/presaved/MJOarray.leadnans.1850-2014.pkl\"\n",
+    "\n",
+    "with gzip.open(mjo_filename, \"rb\") as obj1:\n",
+    "    MJOarray = pickle.load(obj1)\n",
+    "obj1.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.11770853,  0.27926254,  0.1927685 , -0.03238838, -0.29996631,\n",
+       "       -0.3321645 , -0.28373682, -0.15200832, -0.03254344,  0.03816704,\n",
+       "        0.09183547,  0.10217868,  0.08118238,  0.21265218,  0.56105149,\n",
+       "        0.80536103,  0.90774947,  0.88396013,  1.0425688 ,  1.05158186,\n",
+       "        0.79214388,  0.6241079 ,  0.25383815,  0.02444118, -0.2774643 ])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MJOarray[120:145, 3, 2]"
    ]
   }
  ],
