--- a/analysis_006_crps_numeric.ipynb
+++ b/analysis_006_crps_numeric.ipynb
@@ -479,7 +479,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calculate crps for gaussian\n",
+    "\n",
+    "# compare to numeric crps code?"
+   ]
   }
  ],
  "metadata": {
